tests/parser-test-files/bad-files/parse-continue.2.error
error: Invalid argument in continue
  --> test:6:4
   |
 6 |      (continue notakeyword)))
   |      ^^^^^^^^^^^^^^^^^^^^^^ expected a keyword
